--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alphabuybot",
+  "name": "buy_bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@solana/web3.js": "^1.91.8",
+    "axios": "^1.6.8",
     "node-telegram-bot-api": "^0.65.1"
   }
 }
